proof of the new Zaslavsky formula

--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -19,6 +19,7 @@
 \usepackage[noabbrev,capitalise]{cleveref}
 \usepackage[export]{adjustbox}
 \usepackage{ulem}\normalem
+\usepackage{xargs}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
